# PHML

./: CMakeLists.txt  README.md
docs/: README.md  adding-a-module.md
examples/: CMakeLists.txt  basic_usage.cpp
include/PHML/: PHML.hpp
include/PHML/Data/: Core.hpp  Matrix.hpp  README.md  Tensor.hpp
include/PHML/Data/Backend/: MPSAllocator.hpp  MPSOps.hpp  MetalContext.hpp  README.md
include/PHML/core/: version.hpp
src/: CMakeLists.txt
src/Data/: Tensor.cpp
src/Data/Backend/: MPSAllocator.cpp  MPSOps.cpp  MetalContext.cpp
src/core/: version.cpp
tests/: CMakeLists.txt
tests/unit/: test_version.cpp
tests/unit/Data/: test_MPS.cpp  test_Matrix.cpp  test_Tensor.cpp
